<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/el_language"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/el_privacy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/el_rate"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_more_app"
            android:icon="@drawable/el_more"
            android:title="@string/more_app" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/el_exit"
            android:title="@string/exit" />
    </group>

</menu>