<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layout12"

    android:padding="16dp"
    android:background="@color/background">

    <!-- Title -->
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_would_you_like_to_do"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <!-- Option: Set Home Screen -->
    <LinearLayout
        android:id="@+id/layoutSetHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/home_icon"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_home_screen"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Option: Set Lock Screen -->
    <LinearLayout
        android:id="@+id/layoutSetLockScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="-3dp"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:src="@drawable/lock_icon"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_lock_screen"
            android:layout_marginStart="11dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Option: Set Both Screen -->
    <LinearLayout
        android:id="@+id/layoutSetBothScreens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/set_on_both"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_both_screens"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adjustscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingVertical="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_set_adjust_screen"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjust_screen"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
    <ProgressBar
        android:id="@+id/progressBarBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>