<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:id="@+id/bottomsheetdialogbgcolor"
    android:orientation="vertical">
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_would_you_like_to_do"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:weightSum="2">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_icon"
            android:backgroundTint="@color/white"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_home_screen"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:weightSum="2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lock_icon"
            android:backgroundTint="@color/white"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_lock_screen"
            android:textSize="17dp"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/both"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:weightSum="2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/set_on_both"
            android:backgroundTint="@color/white"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/set_both_screens"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:weightSum="2">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/set_on_both"
            android:backgroundTint="@color/white"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/adjust_screen"
            android:textSize="17dp"

            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    </LinearLayout>

<ProgressBar
    android:id="@+id/progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:indeterminateTint="@color/white"/>

</RelativeLayout>